# TeFiti-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  Dockerfile.test  docker-compose.yaml  monitoring.txt
src/: cfg.rs  lib.rs  main.rs
src/api/: cutil.rs  mod.rs  routes.rs
